# bot-plutus-interface

./: .envrc  .gitignore  .gitmodules  ISSUE-89-PLAN-AND-NOTES.md  Makefile  README.md  STANDARDS.md  bot-plutus-interface.cabal  cabal-haskell.nix.project  cabal.project  flake.nix  hie.yaml  mlabs-pab.cabal  shell.nix
.github/: format.sh
.github/workflows/: integrate.yaml
examples/debug/: ci-test.http  comparison.md  debug.cabal  hie.yaml  pab.conf  run-test-lc.sh  run-test-tn.sh  setup.sh
examples/debug/app/: Main.hs
examples/debug/src/: LockSpendMint.hs  SomeDebugContract.hs  TestRun.hs  TimeDebugContract.hs  Tools.hs
examples/ex-units/: README.md  ex-units.cabal  hie.yaml  protocol.json
examples/ex-units/app/: Main.hs
examples/ex-units/src/: LockSpend.hs  LockSpendSingle.hs  PlutipRun.hs  TestnetRun.hs  TimeDebugContract.hs
examples/plutus-game/: README.md  cabal.project  guess.sh  hie.yaml  lock.sh  pabConfig.value  plutus-game.cabal  protocol.json
examples/plutus-game/app/: Main.hs
examples/plutus-game/config/: pabConfig.value
examples/plutus-game/src/Cardano/PlutusExample/: Game.hs
examples/plutus-nft/: .gitignore  README.md  cabal.project  pabConfig.value  plutus-nft.cabal  run.sh
examples/plutus-nft/app/: Main.hs
examples/plutus-nft/config/: pabConfig.value
examples/plutus-nft/src/Cardano/PlutusExample/: NFT.hs
examples/plutus-transfer/: .gitignore  README.md  ada-transfer.sh  cabal.project  hie.yaml  pabConfig.value  plutus-transfer.cabal  run.sh  token-transfer.sh
examples/plutus-transfer/app/: Main.hs
examples/plutus-transfer/config/: pabConfig.value
examples/plutus-transfer/src/Cardano/PlutusExample/: Transfer.hs
nix/: README.md  ci.nix  default.nix  haskell.nix  sha256map.nix  solc.nix  sources.json
src/: BotPlutusInterface.hs  MLabsPAB.hs
src/BotPlutusInterface/: Balance.hs  BodyBuilder.hs  CardanoAPI.hs  CardanoCLI.hs  ChainIndex.hs  CoinSelection.hs  Collateral.hs  CollateralEff.hs  Config.hs  Constraints.hs  Contract.hs  Effects.hs  Estimate.hs  ExBudget.hs  Files.hs  Helpers.hs  Metadata.hs  PreBalance.hs  QueryNode.hs  Server.hs  TimeSlot.hs  Types.hs  UtxoParser.hs
src/BotPlutusInterface/CardanoNode/: Effects.hs  Query.hs
src/BotPlutusInterface/Config/: Base.hs  Ledger.hs  Types.hs
src/BotPlutusInterface/Config/Cardano/: Api.hs
src/BotPlutusInterface/Config/Cardano/Api/: Shelley.hs
src/MLabsPAB/: CardanoCLI.hs  ChainIndex.hs  Contract.hs  Effects.hs  Files.hs  PreBalance.hs  Server.hs  Types.hs  UtxoParser.hs
src/PlutusConfig/: Base.hs  Ledger.hs  Misc.hs  Types.hs
src/PlutusConfig/Cardano/: Api.hs
src/PlutusConfig/Cardano/Api/: Shelley.hs
test/: Spec.hs
test/Spec/: ArbitraryLedger.hs  Mock.hs  MockContract.hs  NatLedger.hs  RandomLedger.hs
test/Spec/BotPlutusInterface/: AdjustUnbalanced.hs  Balance.hs  CoinSelection.hs  Collateral.hs  Config.hs  Contract.hs  ContractStats.hs  PreBalance.hs  Server.hs  TxStatusChange.hs  UtxoParser.hs
test/Spec/MLabsPAB/: Contract.hs  PreBalance.hs  UtxoParser.hs
test/Spec/PlutusConfig/: Base.hs  Ledger.hs  Misc.hs
test/Spec/PlutusConfig/Cardano/: Api.hs
test/Spec/PlutusConfig/Cardano/Api/: Shelley.hs
