cabal-version:      3.0
name:               bot-plutus-interface
version:            0.1.0.0
synopsis:           Unofficial PAB implementation
description:
  Unofficial PAB imlementation, using the cardano-cli in the background to submit transactions

homepage:           https://github.com/mlabs-haskell/bot-plutus-interface
bug-reports:        https://github.com/mlabs-haskell/bot-plutus-interface
license:
license-file:
author:             MLabs
maintainer:         gergely@mlabs.city
copyright:          TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/bot-plutus-interface

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints 
    -- -Werror
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries


library
  import:          common-lang
  exposed-modules:
    BotPlutusInterface
    BotPlutusInterface.Balance
    BotPlutusInterface.BodyBuilder
    BotPlutusInterface.CardanoCLI
    BotPlutusInterface.ChainIndex
    BotPlutusInterface.Contract
    BotPlutusInterface.Effects
    BotPlutusInterface.ExBudget
    BotPlutusInterface.Files
    BotPlutusInterface.Helpers
    BotPlutusInterface.QueryNode
    BotPlutusInterface.Server
    BotPlutusInterface.TimeSlot
    BotPlutusInterface.Types
    BotPlutusInterface.UtxoParser

  build-depends:
    , aeson                      ^>=1.5.0.0
    , attoparsec                 >=0.13.2.2
    , bytestring                 ^>=0.10.12.0
    , cardano-api
    , cardano-crypto
    , cardano-ledger-alonzo
    , cardano-prelude
    , cardano-slotting
    , containers
    , data-default
    , data-default-class
    , directory
    , either
    , filepath
    , freer-extras
    , freer-simple
    , hex
    , http-client
    , http-types
    , lens
    , memory
    , mtl
    , playground-common
    , plutus-chain-index
    , plutus-chain-index-core
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-tx
    , plutus-tx-plugin
    , process
    , QuickCheck
    , row-types
    , serialise
    , servant
    , servant-client
    , servant-server
    , servant-websockets
    , split
    , stm
    , text                       ^>=1.2.4.0
    , transformers
    , transformers-either
    , transformers-except
    , unordered-containers
    , uuid
    , wai
    , warp
    , websockets
    , cardano-ledger-core
    , ouroboros-consensus
    , time

  hs-source-dirs:  src

test-suite bot-plutus-interface-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  ghc-options:    -fplugin-opt PlutusTx.Plugin:defer-errors
  other-modules:
    Spec.BotPlutusInterface.Balance
    Spec.BotPlutusInterface.Contract
    Spec.BotPlutusInterface.ContractStats
    Spec.BotPlutusInterface.Server
    Spec.BotPlutusInterface.UtxoParser
    Spec.MockContract

  build-depends:
    , aeson                      ^>=1.5.0.0
    , attoparsec
    , base
    , base-compat
    , bot-plutus-interface
    , bytestring                 ^>=0.10.12.0
    , cardano-api
    , cardano-crypto-class
    , containers
    , data-default
    , data-default-class
    , either
    , extra
    , filepath
    , freer-extras
    , freer-simple
    , generic-arbitrary
    , hex
    , http-client
    , http-types
    , lens
    , neat-interpolation
    , playground-common
    , plutus-chain-index
    , plutus-chain-index-core
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , quickcheck-instances
    , row-types
    , serialise
    , servant
    , servant-client
    , servant-client-core
    , stm
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , temporary
    , text                       ^>=1.2.4.0
    , utf8-string
    , uuid
    , warp

  hs-source-dirs: test
