cabal-version:      3.0
name:               bot-plutus-interface
version:            0.1.0.0
synopsis:           Unofficial PAB implementation
description:
  Unofficial PAB imlementation, using the cardano-cli in the background to submit transactions

homepage:           https://github.com/mlabs-haskell/bot-plutus-interface
bug-reports:        https://github.com/mlabs-haskell/bot-plutus-interface
license:
license-file:
author:             MLabs
maintainer:         gergely@mlabs.city
copyright:          TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/bot-plutus-interface

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Werror

  build-depends:
    , base
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries


library
  import:          common-lang
  exposed-modules:
    BotPlutusInterface
    BotPlutusInterface.Balance
    BotPlutusInterface.BodyBuilder
    BotPlutusInterface.CardanoAPI
    BotPlutusInterface.CardanoCLI
    BotPlutusInterface.CardanoNode.Effects
    BotPlutusInterface.CardanoNode.Query
    BotPlutusInterface.ChainIndex
    BotPlutusInterface.CoinSelection
    BotPlutusInterface.Collateral
    BotPlutusInterface.Config
    BotPlutusInterface.Constraints
    BotPlutusInterface.Contract
    BotPlutusInterface.Effects
    BotPlutusInterface.ExBudget
    BotPlutusInterface.Files
    BotPlutusInterface.Helpers
    BotPlutusInterface.Metadata
    BotPlutusInterface.Server
    BotPlutusInterface.TimeSlot
    BotPlutusInterface.Types
    BotPlutusInterface.UtxoParser
    PlutusConfig.Base
    PlutusConfig.Cardano.Api
    PlutusConfig.Cardano.Api.Shelley
    PlutusConfig.Ledger
    PlutusConfig.Misc
    PlutusConfig.Types

  build-depends:
    , aeson
    , attoparsec                 >=0.13.2.2
    , base16
    , basement
    , bytestring                 ^>=0.10.12.0
    , cardano-api
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-prelude
    , cardano-slotting
    , cborg
    , config-schema
    , config-value
    , containers
    , data-default
    , data-default-class
    , directory
    , either
    , filepath
    , freer-extras
    , freer-simple
    , hex
    , http-client
    , http-types
    , lens
    , memory
    , mtl
    , ouroboros-consensus
    , playground-common
    , plutus-chain-index
    , plutus-chain-index-core
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , pretty
    , prettyprinter
    , process
    , QuickCheck
    , regex-compat
    , row-types
    , serialise
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , servant-websockets
    , split
    , stm
    , temporary
    , text                       ^>=1.2.4.0
    , time
    , tostring
    , transformers
    , transformers-either
    , transformers-except
    , unordered-containers
    , uuid
    , vector
    , wai
    , warp
    , websockets

  hs-source-dirs:  src

test-suite bot-plutus-interface-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  ghc-options:    -fplugin-opt PlutusTx.Plugin:defer-errors
  other-modules:
    Spec.BotPlutusInterface.AdjustUnbalanced
    Spec.BotPlutusInterface.Balance
    Spec.BotPlutusInterface.CoinSelection
    Spec.BotPlutusInterface.Collateral
    Spec.BotPlutusInterface.Config
    Spec.BotPlutusInterface.Contract
    Spec.BotPlutusInterface.ContractStats
    Spec.BotPlutusInterface.Server
    Spec.BotPlutusInterface.TxStatusChange
    Spec.MockContract
    Spec.RandomLedger

  build-depends:
    , aeson
    , attoparsec
    , base
    , base-compat
    , bot-plutus-interface
    , bytestring                 ^>=0.10.12.0
    , cardano-api
    , cardano-crypto-class
    , cardano-prelude
    , cardano-slotting
    , containers
    , data-default
    , data-default-class
    , either
    , extra
    , filepath
    , freer-extras
    , freer-simple
    , generic-arbitrary
    , hex
    , http-client
    , http-types
    , lens
    , neat-interpolation
    , playground-common
    , plutus-chain-index
    , plutus-chain-index-core
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , pretty-diff
    , prettyprinter
    , QuickCheck
    , quickcheck-instances
    , row-types
    , serialise
    , servant
    , servant-client
    , servant-client-core
    , stm
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , temporary
    , text                       ^>=1.2.4.0
    , transformers-either
    , utf8-string
    , uuid
    , vector
    , warp

  hs-source-dirs: test
